fixed mobile layout issues

--- a/public/css/build.css
+++ b/public/css/build.css
@@ -2,3 +2,18 @@
     padding: 50px;
     margin: 50px;
 }
+
+@media (max-width: 768px){
+    .card-body {
+        padding: 50px 25px;
+        margin: 50px 25px;
+    }
+}
+
+
+@media (max-width: 450px){
+    .card-body {
+        padding: 50px 0;
+        margin: 50px 0;
+    }
+}
