--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -577,12 +577,6 @@ body {
 */
 
 /* footer section starts */
-.footer .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
-    gap:2rem;
-}
-
 .footer .box-container .box h3{
     font-size: 2.5rem;
     color:var(--black);
